--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,32 +1,64 @@
 .headerStyle {
   display: flex;
-  width: 100%;
   flex-direction: row;
-  padding: 16px;
+  justify-content: space-between;
+  padding: 16px 64px;
+  margin: 0;
+  background-color: whitesmoke;
 }
 
 .headerLogo {
-  height: 128px;
-  width: 128px;
-  transition: height 1s, width 1s;
+  height: 74px;
+  width: 74px;
+  transition: transform 0.7s;
+  border-radius: 50%;
+  margin-right: 16px;
+}
+
+.headerLogo:hover {
+  transform: scale(1.05);
+  transform-origin: center;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
 }
 
 .logoFont {
   font-family: 'Gloria Hallelujah';
   font-size: 32px;
-  vertical-align: middle;
   font-weight: bold;
 }
 
-.headerLogo:hover {
-  height: 138px;
-  width: 138px;
-}
-
 .navLinks {
-  align-self: flex-end;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: auto;
 }
 
 .navLinks a {
-  padding: 16px;
+  width: 90px;
+  text-align: center;
+  padding: 12px 16px;
+  margin: 0 4px;
+  border-radius: 8px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.navLink:hover {
+  background-color: #eee7f7;
+}
+
+.headerCTA {
+  background-color: #452c63;
+  color: white;
+  border: 1px solid #452c63;
+}
+
+.headerCTA:hover {
+  background-color: inherit;
+  color: inherit;
+  border: 1px solid black;
 }
