--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -4,7 +4,6 @@
   justify-content: space-between;
   padding: 16px 64px;
   margin: 0;
-  background-color: whitesmoke;
 }
 
 .headerLogo {
@@ -43,17 +42,20 @@
   text-align: center;
   padding: 12px 16px;
   margin: 0 4px;
-  border-radius: 8px;
-  transition: background-color 0.2s, color 0.2s;
+  border: 1px solid white;
+  transition: background-color 0.2s, color 0.2s, border 0.2s;
 }
 
 .navLink:hover {
-  background-color: #eee7f7;
+  background-color: white;
+  color: #452c63;
+  border-bottom: 1px solid #452c63;
 }
 
 .headerCTA {
   background-color: #452c63;
   color: white;
+  border-radius: 8px;
   border: 1px solid #452c63;
 }
 
