--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -58,3 +58,80 @@
   background-color: white;
   padding: 2px;
 }
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modalWrapper {
+  position: relative;
+  background-color: #fff; /* Set desired background color */
+  max-width: 70%;
+  max-height: 70%;
+  overflow-y: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+}
+
+.closeBtn {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  z-index: 1;
+
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    height: 2px;
+    background-color: #2c0505; /* Set the color of the cross */
+  }
+
+  &::before {
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+
+  &::after {
+    transform: translate(-50%, -50%) rotate(-45deg);
+  }
+
+  &:hover::before, &:hover::after {
+    background-color: gray;
+  }
+}
+
+.modalContent {
+  display: flex;
+  flex-direction: row;
+
+  & * {
+    flex: 1;
+  }
+}
+
+.modalText {
+  padding: $unit;
+  align-self: center;
+  text-align: center;
+}
+
+.modalImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
