--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -69,6 +69,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
 }
 
 .modalWrapper {
@@ -117,14 +118,11 @@
 .modalContent {
   display: flex;
   flex-direction: row;
-
-  & * {
-    flex: 1;
-  }
 }
 
 .modalText {
   padding: $unit;
+  width: 100%;
   align-self: center;
   text-align: center;
 }
