--- a/src/pages/form.module.scss
+++ b/src/pages/form.module.scss
@@ -1,32 +1,5 @@
 @import '../variables.scss';
 
-.loginBackground {
-  width: 100%;
-  height: 100vh;
-  background: rgb(33,21,47);
-  background: linear-gradient(180deg, rgba(33,21,47,1) 0%, rgba(69,44,99,1) 55%, rgba(111,79,148,1) 100%);
-  display: flex;
-  justify-content: center;
-}
-
-.loginWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 520px;
-  min-width: 320px;
-  background-color: white;
-  margin: 2*$unit;
-  padding-top: 2*$unit;
-  border-radius: 2*$unit;
-  box-shadow: 2px 2px 10px 0px #301f45;
-}
-
-.logo {
-  height: 6*$unit;
-  width: 6*$unit;
-}
-
 .logoFont {
   font-family: 'Gloria Hallelujah';
   font-size: 32px;
@@ -38,11 +11,22 @@
   flex-direction: column;
   padding: $unit 0;
 
+  .pwError {
+    color: red;
+    padding-top: 0;
+    visibility: visible;
+  }
+
+  .pwValid {
+    visibility: hidden;
+  }
+
   input {
     height: 2.5em;
     width: 20em;
     font-size: medium;
     margin-bottom: $unit;
+    margin-top: 4px;
     padding-left: $unit;
     outline: 3px solid white;
     border: 1px solid black;
