--- a/src/components/form-wrapper.module.scss
+++ b/src/components/form-wrapper.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 520px;
+  width: 50%;
   min-width: 320px;
   background-color: white;
   margin: 2*$unit;
